tests/errors/intrinsics1.f90
program intrinsics1
    implicit none
    print *, radix((2.4, 1.0))
end program intrinsics1
